Revision history for Perl distribution Tree

1.02  Thu Oct  4 12:10:00 2012
	- Ron Savage is now co-maint.
	- Rename Changes to CHANGES.
	- Reformat the dates below.
	- Use ini.report.pl (shipped with Module::Metadata::Changes) to add Changelog.ini to the distro.
	- Reformat the dates below.
	- Change lib/Tree/Fast.pm to Unix line endings.

1.01  Thu Oct 18 12:00:00 2007
	- Fixed Changes file
	- Right distro name.
	- 1.00 release noted
	- Cleaned up 5.6.0 -> 5.006
	- Fix for RT# 16889 (clone broken for Tree::Binary)
	- Patch submitted by HDP
	- Fix for other miscellenous bugs
	- Patch submitted by HDP

1.00  Tue Nov 08 12:00:00 2005
	- Initial release

0.99  Mon Oct 24 10:30:00 2005
	- Initial revision