@@ -12,6 +12,8 @@ Comments= <<EOT
 - Use ini.report.pl (shipped with Module::Metadata::Changes) to add Changelog.ini to the distro.
 - Reformat the dates below.
 - Change lib/Tree/Fast.pm to Unix line endings.
+- Clean up PODs, slightly.
+- Re-work Makefile.PL rather than have Build.PL generate it.
 EOT
 
 [V 1.01]
