@@ -5,11 +5,7 @@ author:
   - 'Stevan Little E<lt>stevan.little@iinteractive.comE<gt>'
   - 'Co-maintenance since V 1.02 is by Ron Savage <rsavage@cpan.org>.'
 build_requires:
-  Scalar::Util: 1.10
-  Test::Deep: 0.088
-  Test::Exception: 0.15
-  Test::More: 0.47
-  Test::Warn: 0.08
+  ExtUtils::MakeMaker: 0
 configure_requires:
   Module::Build: 0.4
 dynamic_config: 0
@@ -34,7 +30,10 @@ provides:
     version: 0
 requires:
   Scalar::Util: 1.10
-  perl: v5.6.0
+  Test::Deep: 0.088
+  Test::Exception: 0.15
+  Test::More: 0.47
+  Test::Warn: 0.08
 resources:
   license: http://dev.perl.org/licenses/
 version: 1.02
